<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/womenbackground"
    tools:context="com.brus5.lukaszkrawczak.KalkulatorMetabolizmu.neatKobieta">

    <TextView
        android:visibility="gone"
        android:id="@+id/teaTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:visibility="gone"
        android:id="@+id/cpmTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:visibility="gone"
        android:id="@+id/tteaTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/neat_title"
        android:textAlignment="center"
        android:textSize="16dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/neatinfoTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/neat"
        android:textSize="14sp"
        android:textStyle="bold"
        android:visibility="gone" />

    <TextView
        android:id="@+id/infoTextView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Wybierz jedno z poniższych:"
        android:textStyle="bold" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/noTrainingRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/neat_option1" />

        <RadioButton
            android:id="@+id/beginnerRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/neat_option2" />

        <RadioButton
            android:id="@+id/advencedRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/neat_option3" />
    </RadioGroup>

    <Button
        android:id="@+id/liczNeatButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="Licz" />

    <ImageView
        android:id="@+id/imageViewInfo"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:srcCompat="@drawable/infoicon"
        android:layout_gravity="right" />

    <TextView
        android:id="@+id/neatinfo1TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/neat_txt"
        android:visibility="gone" />


    <TextView
        android:id="@+id/neatinfo2TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/neat_txt0"
        android:visibility="gone" />

    <TextView
        android:id="@+id/neatinfo3TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/neat_txt1"
        android:visibility="gone" />

    <TextView
        android:id="@+id/neatinfo4TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/neat_txt2"
        android:visibility="gone" />

    <TextView
        android:id="@+id/neatinfo5TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/neat_txt3"
        android:visibility="gone" />

    <TextView
        android:id="@+id/neatinfo6TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/neat_txt4"
        android:visibility="gone" />

    <TextView
        android:id="@+id/neatinfo7TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/neat_txt5"
        android:visibility="gone" />

    <TextView
        android:id="@+id/infoTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Sugerowane dzienne zapotrzebowanie aby zachować aktualną wagę ciała to:"
        android:textAlignment="center"
        android:visibility="invisible" />

    <TextView
        android:textStyle="bold"
        android:shadowColor="@color/colorPrimaryDark"
        android:textColor="@color/colorAccent"
        android:textSize="30dp"
        android:textAlignment="center"
        android:id="@+id/cpmFinalTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</LinearLayout>
